# Brain

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FINAL_REPORT.md  PROGRESS.md  PR_NOTES.md  README.md  SETUP.md  STATUS.md  VERIFY.md  idea.md  mistakes.md  task.md  task_v0.2.md  task_v0.3.md
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: agents.py  approvals.py  chat.py  config.py  costs.py  health.py  llm.py  memory.py  receipts.py  runs.py
backend/app/core/: config.py  costs.py  errors.py  ids.py  time.py
backend/app/db/: migrate.py  repo_agents.py  repo_approvals.py  repo_budgets.py  repo_fs_allowlist.py  repo_memory.py  repo_messages.py  repo_planner_traces.py  repo_rag.py  repo_receipts.py  repo_runs.py  schema.sql  sqlite.py
backend/app/events/: __init__.py  bus.py  sse.py
backend/app/llm/: __init__.py  base.py  ollama.py  prompt_templates.py  router.py  token_estimate.py
backend/app/memory/: chunk.py  dedup.py  embed.py  facts.py  lancedb_store.py  rag.py  store.py
backend/app/orchestrator/: graph.py  pending.py  state.py
backend/app/orchestrator/nodes/: __init__.py  context.py  execute.py  finalize.py  plan.py  rewrite.py  (+2 more)
backend/app/schemas/: __init__.py  agent.py  approval.py  events.py  export.py  planner.py  receipt.py  task_spec.py  tool_call.py
backend/app/tests/: conftest.py  test_agents.py  test_approvals.py  test_health.py  test_planner.py  test_policy.py  test_rag.py  test_receipts.py  test_runs.py  test_security.py
backend/app/tools/: __init__.py  base.py  policy.py  registry.py  runner.py
(+47 files in other folders)
